tests/parser-test-files/parse-or.txt
================================================================================
Malformed or expression
================================================================================

(package test-package)

(define x (or))

--------------------------------------------------------------------------------

error: Malformed or expression
  --> test:3:14
   |
 3 |  (define x (or))
   |               ^ expected one or more arguments
